# SpaceShips

./: CMakeLists.txt  README.md  Run.sh  TestsRun.sh  main.cpp  testRunner.cpp
Source/: Bullet.cpp  Button.cpp  Controllable.cpp  EnemiesManager.cpp  Menu.cpp  Moveable.cpp  SelfSteering.cpp  Spaceship.cpp  Sprite.cpp
Source/Headers/: Bullet.hpp  Button.hpp  Controllable.hpp  EnemiesManager.hpp  Global.hpp  Menu.hpp  Moveable.hpp  SelfSteering.hpp  Spaceship.hpp  Sprite.hpp
